fix financing submission